--- a/css/style.css
+++ b/css/style.css
@@ -909,6 +909,21 @@ ul.portfolio-image li .desc{
   height: 100%;
   float: left;
 }
+.interests {
+  background: url('../images/IMG_1894.jpg');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  padding: 0px;
+  margin: 0px;
+  min-height: 900px;
+  width: 100%;
+  height: 100%;
+  float: left;
+}
 .wrap-about {
   height: 100%;
   width: 100%;
